# wombocombo

./: .gitignore  Alternatives.md  Cargo.toml  LICENSE.md  Readme.md  TODO.md  UseCases.md  meson.build  meson_options.txt
build-aux/: org.matteonardi.WomboCombo.Devel.json
crates/model/: Cargo.toml
crates/model/src/: config.rs  discover.rs  keycodes.rs  lib.rs  main.rs  meson.build  tests.rs
crates/ui/: Cargo.toml  build.rs
crates/ui/resources/: main_window.ui  preview.ui  resources.gresource.xml
crates/ui/src/: main.rs  meson.build
crates/ui/src/main_window/: imp.rs  mod.rs
crates/ui/src/preview/: imp.rs  mod.rs
crates/wombo_daemon/: Cargo.toml  README.md
crates/wombo_daemon/src/: main.rs  meson.build
data/: org.matteonardi.WomboCombo.conf  org.matteonardi.WomboCombo.desktop.in.in  org.matteonardi.WomboCombo.gschema.xml.in  org.matteonardi.WomboCombo.metainfo.xml.in.in
data/resources/: resources.gresource.xml
data/resources/ui/: preview.ui
po/: POTFILES.in
src/: config.rs  main.rs  preview.rs  tests.rs
