[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model/" }
gio = "0.15.12"
glib = "0.15.12"
gtk = { version = "0.4.8", package = "gtk4", features = ["v4_6"]}
adw = { version = "0.2.0-alpha.2", package = "libadwaita" }

[build-dependencies]
gtk = { version = "0.4.8", package = "gtk4", features = ["v4_6"]}
