[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model/" }
gio = "0.16.2"
glib = "0.16.2"
gtk = { version = "0.5.0", package = "gtk4", features = ["v4_6"]}
adw = { version = "0.2.0-alpha.2", package = "libadwaita" }

[build-dependencies]
glib-build-tools = "0.16.0"
